<resources>
    <string name="app_name">SurfSchoolMem</string>
    <string name="login_lbl">Login</string>
    <string name="password_lbl">Password</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="empty_field_msg">Can\'t be empty</string>
    <string name="short_password_msg">Too short password</string>
    <string name="login_error_msg">Wrong data! Try again</string>
    <string name="mems_loading_error_msg">Failed to load feed. Refresh screen or try again later</string>
    <string name="toolbar_popular_memes">Popular memes</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="n_days_ago">%1$d days ago</string>
    <string name="create_btn">Create</string>
    <string name="title_lbl">Title</string>
    <string name="description_lbl">Text</string>
    <string-array name="attach_source">
        <item>Select from gallery</item>
        <item>Create new photo</item>
    </string-array>
    <string name="about_lbl">About</string>
    <string name="logout_lbl">Logout</string>
    <string name="profile_lbl">Profile</string>
    <string name="meme_created_msg">Meme was successfully created</string>
    <string name="logout_dialog_title">Do you really want to exit?</string>
    <string name="logout_dialog_logout">Logout</string>
    <string name="logout_dialog_cancel">Cancel</string>

</resources>
